<resources>
    <string name="app_name">Tuition Plus</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="smart_pay">SMART PAY</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="fab">FAB</string>
    <string name="menu01">Scan QR</string>
    <string name="menu02">Search</string>
    <string name="menu03">Profile</string>
    <string name="menu04">Referrals</string>
    <string name="menu05">Discounts</string>
    <string name="tuition_plus">Tuition Plus</string>
    <string name="enroll">Enroll</string>
    <string name="tutor">Tutor</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="fee">Class Fee</string>
    <string name="discount_code">Discount Code</string>
    <string name="apply_discount">Apply</string>
    <string name="checking_payment_info">Checking Payment Info</string>
    <string name="home_verbiage">Following are your upcoming classes</string>
    <string name="final_due_amount">Final Due Amount</string>
    <string name="no_discount">No discount available for the class</string>
    <string name="cancel">Cancel</string>
    <string name="anka_qr">Pay Using Lanka QR</string>
    <string name="amex">Pay Using AMEX</string>
    <string name="visa">Pay Using Visa</string>
    <string name="ez_cash">Pay Using Ez Cash</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_the_card">Name on the Card</string>
    <string name="cvv">CVV</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="pay">PAY</string>
    <string name="class_verbiage">Following are the your class materials given by the lecturer</string>
    <string name="class_image">Class Image</string>
    <string name="search_text">Search for a Class</string>
    <string name="name">Student Name:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="userName">Username:</string>
    <string name="parentName">Parent Name:</string>
    <string name="parentPhone">Parent Phone:</string>
    <string name="parentEmail">Parent Email:</string>
    <string name="profile">Student Profile</string>
    <string name="search">Search Class</string>
    <string name="referral">Refer a Student</string>
    <string name="referName">Reffering Friend Name</string>
    <string name="referNo">Reffering Friend Number</string>
    <string name="referSubject">Subject Reffering for</string>
    <string name="referYear">Year Reffering for</string>
    <string name="submit">Submit Student</string>
    <string name="discount">Request for a Relief</string>
    <string name="reliefReason">Reason for the request</string>
    <string name="extraDetails">Extra Details</string>
    <string name="attach">Attach Documents</string>
    <string name="support_documents">Support Documents</string>
    <string name="submitRequest">Submit Request</string>
</resources>