<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0FBFF"
    tools:context=".ui.relief.ReliefRequestActivity">

    <LinearLayout
        android:id="@+id/reasonLayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/reliefReason"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:labelFor="@id/reason"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Dushyantha" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailsLayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reasonLayer">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/extraDetails"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/extraDetails"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageLayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsLayer">

        <TextView
            android:id="@+id/btnAttach"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:gravity="center|center_horizontal"
            android:text="@string/attach"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/supportDocs"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/support_documents"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        android:gravity="center|center_horizontal"
        android:text="@string/submitRequest"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>