<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCF5FA"
    tools:context=".ui.profile.ProfileActivity">

    <LinearLayout
        android:id="@+id/firstNameLayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Dushyantha" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastNameLayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameLayer">

        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Mahabaduge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userNameLayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameLayer">

        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Dushyantha" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/parentNameLayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameLayer">

        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/parentName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/parent_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Dushyantha" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/parentPhoneLayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parentNameLayer">

        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/parentPhone"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/parent_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="+94 71 477 3127" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/parentEmailLayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parentPhoneLayer">

        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/parentEmail"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/parent_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="abc@abc.com" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>